# rindag-rust

./: .gitmodules  Cargo.toml  sandbox.Dockerfile  start-judge-server.sh  start-minio.sh  start-postgres.sh  start-redis.sh  start-sandbox.sh
crates/judge/: Cargo.toml  build.rs
crates/judge/proto/: sandbox.proto
crates/judge/src/: args.rs  builtin.rs  checker.rs  compile.rs  data.rs  error.rs  etc.rs  file.rs  generator.rs  judge.rs  lang.rs  main.rs  problem.rs  program.rs  record.rs  result.rs  status.rs  task.rs  testlib.rs  validator.rs  workflow.rs
crates/judge/src/judge/: batch.rs
crates/judge/src/problem/: answer.rs  input.rs  mod.rs
crates/judge/src/sandbox/: client.rs  exec.rs  file.rs  mod.rs  proto.rs  request.rs  response.rs
crates/judge/src/test/: checker.rs  compile.rs  generator.rs  mod.rs  problem.rs  program.rs  sandbox.rs  task.rs  testlib.rs  validator.rs  workflow.rs
src/: main.rs
src/service/: args.rs  etc.rs  mod.rs
src/service/judge/: client.rs
src/service/sandbox/: client.rs  exec.rs  mod.rs
src/test/: judge.rs  sandbox.rs
