[package]
name = "rindag"
version = "0.1.0-dev"
edition = "2021"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
serde = "1.0.144"
lazy_static = "1.4.0"
clap = { version = "3.2.20", features = ["derive", "unicode"] }
shadow-rs = "0.16.3"

[build-dependencies]
shadow-rs = "0.16.3"
