[workspace]
members = ["crates/*"]

[package]
name = "rindag"
version = "0.1.0-dev"
description = """
rindag is a online judge system dedicated to creating programming competition problems.
"""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shadow-rs = "0.16"

[build-dependencies]
shadow-rs = "0.16"
