[package]
name = "rindag-judge"
version = "0.1.0-dev"
description = """
rindag-judge is the sandbox-module for rindag server.
"""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
serde = "1"
lazy_static = "1"
clap = { version = "3", features = ["derive", "unicode"] }
shadow-rs = "0.16"
serde_json = "1"
serde_bytes = "0.11"
encoding_rs = "0.8"
url = { version = "2", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "*"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
log = "0.4"
pretty_env_logger = "0.4"
async-stream = "0.3"
bytes = "1"
thiserror = "1"

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[build-dependencies]
shadow-rs = "0.16"
