[package]
name = "rindag-judge"
version = "0.1.0-dev"
description = """
rindag-judge is the sandbox-module for rindag server.
"""
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
serde = "1"
lazy_static = "1"
clap = { version = "3", features = ["derive", "unicode", "cargo"] }
shadow-rs = "0.16"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.9"
thiserror = "1"
regex = "1"
strum = { version = "0.24", features = ["derive"] }
async_once = "0.2"
tonic = "0.8"
prost = "0.11"
prost-types = "0.11"
rust-embed = { version = "6", features = ["debug-embed", "include-exclude"] }
serde_with = "2"
serde_bytes = "0.11"
async-trait = "0.1"
typetag = "0.2"
futures = "0.3"
rmp-serde = "1"

[dependencies.uuid]
version = "1"
features = ["v4", "fast-rng", "macro-diagnostics", "serde"]

[build-dependencies]
shadow-rs = "0.16"
tonic-build = "0.8"
